--- a/public/chat.html
+++ b/public/chat.html
@@ -4,6 +4,8 @@
 <head>
     <title>Chat App</title>
     <link rel="icon" href="/img/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 
